--- a/templates/index.html
+++ b/templates/index.html
@@ -4,25 +4,81 @@
     <script type="text/javascript">
         $SCRIPT_ROOT = {{ request.script_root | tojson | safe }};
     </script>
+    <style>
+        li {
+            display: inline-block;
+            margin: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </nav>
+
+
     <h1>Rent Ratio Investing Tool</h1>
-    <p><input type="text" size="15" name="city">
+
+
+
+    <p>
+        <label for="city">City</label>
+        <input type="text" size="15" name="city">
+        <label for="state">State</label>
         <input type="text" size="15" name="state">
+        <label for="full_state">Full State</label>
         <input type="text" size="15" name="full_state">
+
+
+
         <img id="result" src="" />
         <img id="result2" src="" />
         <img id="result3" src="" />
         <img id="result4" src="" />
+        <img id="result6" src="" />
+        <img id="result7" src="" />
 
-        <p><button id="calculate">Click when finished</button>
+    <div>
+
+        <h2> Model Errors </h2>
 
 
-            <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-            <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-            <script type="text/javascript" src="/static/main.js"></script>
+        <p>
+            <span id="result5"></span>
+        </p>
+
+        <p>
+            <span id="result8"></span>
+        </p>
+
+        <p>
+            <span id="result9"></span>
+        </p>
+
+        <p>
+            <span id="result10"></span>
+        </p>
+
+    </div>
+
+    <p><button id="calculate">Click when finished</button>
+
+
+
+
+
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="/static/main.js"></script>
 </body>
 
 </html>
